feat: 결제 그리드·ChillPay·본사/사용자/정산 연동 정리
- 결제내역 컬럼: 번호·업체명·업체코드·거래일·거래시간·RouteNo·TransactionId
- pg_trnsctn 확장(V19/V20), PayListItemDto compNm, 정산/UserList 보완
- 본사 계정접근·노티 대상·유통 수수료 설정 등 백엔드·Flyway 추가
- site 그리드/메뉴, 문서, .gitattributes, 재시작 배치

Made-with: Cursor